# fast-levenshtein

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSE  justfile  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/binding_node/: .npmignore  Cargo.toml  index.d.ts  index.js  package.json  test.mjs
crates/binding_node/src/: lib.rs
crates/core/: Cargo.toml
crates/core/benches/: bench.rs
crates/core/tests/: test.rs
src/: js_int.rs  lib.rs
xtask/: Cargo.toml
