[package]
name = "fast-levenshtein"
version = "0.1.0"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "Levenshtein algorithm"
repository = "https://github.com/shixinhuang99/fast-levenshtein"
homepage = "https://github.com/shixinhuang99/fast-levenshtein"
documentation = "https://docs.rs/fast-levenshtein"
license = "MIT"
categories = ["algorithms"]
keywords = ["levenshtein"]

[dependencies]
