[package]
name = "fast_levenshtein"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "Levenshtein algorithm"
repository = "https://github.com/shixinhuang99/fast-levenshtein"
documentation = "https://docs.rs/fast_levenshtein"
license = "MIT"
categories = ["algorithms"]
keywords = ["levenshtein"]
include = ["Cargo.toml", "README.md", "LICENSE", "src/**"]

[dev-dependencies]
levenshtein = "1.0.5"
strsim = "0.10.0"
